# hh-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  providers.json.example  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  index.css
frontend/src/components/: Card.tsx
frontend/src/views/: Feed.tsx  Login.tsx  Searches.tsx  Status.tsx
src/hh_agent/: __init__.py  composition.py  config.py  interfaces.py  main.py  models.py  scheduler.py
src/hh_agent/ai/: __init__.py  fallback.py  openai_scorer.py  prompts.py  scorer.py
src/hh_agent/bot/: __init__.py  bot.py  cards.py  handlers.py  notifier.py
src/hh_agent/db/: __init__.py  storage.py
src/hh_agent/hh/: __init__.py  client.py
src/hh_agent/web/: __init__.py  app.py  auth.py  notifier.py  routes.py  schemas.py
tests/: test_bot_cards.py  test_fallback.py  test_hh_client.py  test_openai_scorer.py  test_scheduler.py  test_scoring.py  test_storage.py  test_storage_cards.py  test_web_api.py  test_web_notifier.py
