[project]
name = "hh-agent"
version = "0.1.0"
description = "Личный ИИ-агент поиска работы на hh.ru: мониторинг, скоринг, отклики, Telegram-интерфейс"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "aiogram[proxy]>=3.29",  # [proxy] = aiohttp-socks: aiohttp не читает HTTPS_PROXY сам
    "anthropic>=0.116",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
